[gd_scene load_steps=3 format=2]

[ext_resource path="res://mvc-scene/scene/main.gd" type="Script" id=1]
[ext_resource path="res://mvc-scene/view/user_attribute_view.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="user_attribute_view" parent="." instance=ExtResource( 2 )]

[node name="AddGold" type="Button" parent="."]
margin_left = 20.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 90.0
text = "AwardGold"

[node name="AddHP" type="Button" parent="."]
margin_left = 130.0
margin_top = 50.0
margin_right = 210.0
margin_bottom = 90.0
text = "RecoverHP"

[node name="Damage" type="Button" parent="."]
margin_left = 240.0
margin_top = 50.0
margin_right = 320.0
margin_bottom = 90.0
text = "Damage"

[node name="SaveGame" type="Button" parent="."]
margin_left = 350.0
margin_top = 50.0
margin_right = 430.0
margin_bottom = 90.0
text = "SaveGame"

[connection signal="pressed" from="AddGold" to="." method="_on_AddGold_pressed"]
[connection signal="pressed" from="AddHP" to="." method="_on_AddHP_pressed"]
[connection signal="pressed" from="Damage" to="." method="_on_Damage_pressed"]
[connection signal="pressed" from="SaveGame" to="." method="_on_SaveGame_pressed"]
